	  EA3131.

5.3 2010-04-11 Gregory Nutt <spudmonkey@racsa.co.cr>

	* arch/arm/src/lpc313x/lpc313x_usbdev.c - USB driver for the LPC313x
	  contributed by David Hewson.
	* configs/ea3131/src/up_ubstrgc.c, configs/ea3131/usbserial,
	  configs/ea3131/usbstorage - USB storage and USB serial example support
	  contributed by David Hewson.
	* Several important compilation error fixes in lpc313x and (dualspeed) USB
	  code also contributed by David Hewson.
	* arch/arm/src/sam3u/sam3u_dmac.c - DMA support for the AT90SAM3U.
	* arch/arm/src/sam3u/sam3u_hsmci.c - SD memory card support for AT90SAM3U
	  (Neither the DMA nor the HSMCI driver are functional on the initial checkin).
	* drivers/usbdev - Several important fixes to the USB mass storage driver
	  submitted by David Hewson.
	* configs/olimex-lpc2378, arch/arm/include/lpc2378, and arch/arm/src/lpc2378 -
	  Basic port of the NXP 2378 on the Olimex board contributed by
	  Rommel Marcelo.
	* arch/arm/src/sam3u/sam3u_internal.h - Fixed a critical bug in the AT91SAM3U
	  PIO decoding.  No PIOs greater than 15 could be used on any port!  Obviously,
	  no one has been using this port.

5.4 2010-04-23 Gregory Nutt <spudmonkey@racsa.co.cr>

	* include/nuttx/lcd.h - Defines an LCD interface.
	* graphics/nxglib/fb and lcd - Support LCD and framebuffer rasterizers for NX.
	* configs/sam3u-ek/src/up_lcd.c - LCD driver for LCD on SAM3U-EK development
	  board.
	* configs/sam3u-ek/nx - NX graphics configuration for the SAM3U-EK

5.5 2010-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* drivers/net/enc28j60.c - Microchip ENC28J60 SPI ethernet chip driver.
	  (untested on original check-in).
	* configs/olimex-str7p11/nettest - examples/nettest configuration using
	  the ENC28J60 driver on the Olimex STMicro STR-P711.
	  (unverified on original check-in)
	* configs/olimex-str7p11/src/up_enc28j60.c - Add ENC28J60 initialization
	  logic.
	* arch/arm/src/str7x/str7x_xti.c - Add basic XTI support (external
	  interrupts).
